# SnakeGame

./: CMakeLists.txt  SnakeGame.vcxproj  SnakeGame.vcxproj.filters
include/: CMakeLists.txt
include/Core/: CMakeLists.txt  Game.h  GameObject.h  TransformComponent.h  Window.h
include/Display/: CMakeLists.txt  ScoreDisplay.h
include/Entities/: CMakeLists.txt  Food.h  Snake.h  SnakeSegment.h
include/Interfaces/: CMakeLists.txt  IBounded.h  ICollidable.h  IInputReceiver.h  IMovable.h  IScorable.h  IUpdatable.h  IWindow.h
include/Managers/: CMakeLists.txt  InputManager.h  ScoreManager.h
include/Settings/: CMakeLists.txt  MoveSettings.h
include/Utils/: CMakeLists.txt  Constants.h  Utils.h
lib/SFML/: CMakeLists.txt
src/: CMakeLists.txt  SnakeGame.cpp
src/Core/: CMakeLists.txt  Game.cpp  GameObject.cpp  TransformComponent.cpp
src/Display/: CMakeLists.txt  ScoreDisplay.cpp
src/Entities/: CMakeLists.txt  Food.cpp  Snake.cpp  SnakeSegment.cpp
src/Managers/: CMakeLists.txt  InputManager.cpp
src/Utils/: CMakeLists.txt  Constants.cpp  Utils.cpp
tests/: CMakeLists.txt  FoodTest.h  GameObjectTest.cpp  GameObjectTest.h  InputManagerTest.h  MockGame.h  MockInputManager.h  MockScoreManager.h  MockWindow.h  MoveSettingsTest.h  ScoreDisplayTest.h  ScoreManagerTest.h  SnakeSegmentTest.h  SnakeTest.h  TestMain.cpp  TransformComponentTest.h
